# funk

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  VERSIONS.md  bytecode_smoke.f  compile.py  funky.py  requirements.txt
.githooks/: pre-push
benchmarks/: benchmarks.md  generate_report.py
benchs/: array_concat.f  collatz_compare.py  concat_compare.c  concat_compare.f  fib_tr_compare.f  fp_axpy_compare.c  fp_axpy_compare.f  fp_dot_compare.f  fp_dot_compare.py  fp_triad_compare.f  fp_triad_compare.py  mutual_recursion_compare.py
crates/funk_wasm/: Cargo.toml
crates/funk_wasm/src/: lib.rs
doc/: BytecodePlan.md  BytecodeSpec.md  Language.md
examples/: fizzbuzz.f  fizzbuzz.funk  foreach.funk
funk/: codegen.py  funk.py  funk_ast.py  funk_ast_transformer.py  funk_constants.py  funk_ll1.lark  funk_llvm_emitter.py  funk_types.py  linker.py
funk_vm/: Cargo.toml  README.md
include/: abs.f  all.f  and_guard.f  antidiagonals.f  any.f  arg_eq.f  arg_neq.f  argmax.f  argmin.f  assert.f  astar.f  bfs.f  binary_search.f  bst.f  count.f  croll.f  diagonals.f  do_until_success.f  find.f  find_all.f  foreach.f  fread_list.f  hroll.f  inverse.f  map.f  max.f  min.f  neg.f  not.f  render_board.f  replace_matrix_element.f  roll.f  rroll.f  sem_matrix.f  set_diff.f  set_ij.f  set_k.f  shift_matrix.f  sort.f  t_arr_eq.f  (+6 more)
scripts/: benchmark_bytecode_smoke.py  benchmark_collatz_compare.py  benchmark_concat_compare.py  benchmark_fib_compare.py  benchmark_fib_tr_compare.py  benchmark_fp_axpy_compare.py  benchmark_fp_dot_compare.py  (+4 more)
(+91 files in other folders)
